# market-maker-bot

./: .cspell.json  .env.example  .gitignore  README.md  config.example.yaml  config.testnet.yaml  pyproject.toml  requirements.txt
src/market_maker_bot/: __init__.py  bot.py  config.py  execution_state.py  hanging_orders.py  main.py  market.py  models.py  order_state.py
src/market_maker_bot/indicators/: __init__.py  depth.py  stream_volatility.py  volatility.py
src/market_maker_bot/pricing/: __init__.py  avellaneda.py  black_scholes.py  inventory.py
src/market_maker_bot/utils/: __init__.py  ring_buffer.py
tests/: __init__.py  conftest.py  test_avellaneda.py  test_black_scholes.py  test_bot.py  test_execution_state.py  test_hanging_orders.py  test_volatility.py
